<resources>
    <string name="app_name">CircleMenu</string>
    <string name="min_menu_radius">Min Menu Radius</string>
    <string name="max_menu_radius">Max Menu Radius</string>
    <string name="menu_radius">Menu Radius</string>
    <string name="item_radius">Item Radius</string>

    <string name="angle">Angle</string>
    <string name="start_angle">Start Angle</string>
    <string name="sweep_angle">Sweep Angle</string>

    <string name="anchor">Anchor</string>
    <string name="anchor_left_top">Left Top</string>
    <string name="anchor_left_bottom">Left Bottom</string>
    <string name="anchor_right_top">Right Top</string>
    <string name="anchor_right_bottom">Right Bottom</string>
    <string name="anchor_center">Center</string>
    <string name="anchor_center_left">Center Left</string>
    <string name="anchor_center_top">Center Top</string>
    <string name="anchor_center_right">Center Right</string>
    <string name="anchor_center_bottom">Center Bottom</string>
    <string name="anchor_offset_x">Anchor Offset X</string>
    <string name="anchor_offset_y">Anchor Offset Y</string>

    <string name="menu_color">Menu Color</string>
    <string name="shadow_color">Shadow Color</string>
    <string name="menu_shadow_radius">Menu Shadow Radius</string>
    <string name="btn_circle_menu">Circle Menu</string>
    <string name="btn_circle_menu_helper">Circle Menu Helper</string>
</resources>
