<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextLabelStyle"
                android:text="@string/anchor" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3">

                <RadioButton
                    android:id="@+id/rb_anchor_left_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_left_top" />

                <RadioButton
                    android:id="@+id/rb_anchor_center_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_center_top" />

                <RadioButton
                    android:id="@+id/rb_anchor_right_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_right_top" />

                <RadioButton
                    android:id="@+id/rb_anchor_center_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_center_left" />

                <RadioButton
                    android:id="@+id/rb_anchor_center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_center" />

                <RadioButton
                    android:id="@+id/rb_anchor_center_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_center_right" />

                <RadioButton
                    android:id="@+id/rb_anchor_left_bottom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_left_bottom" />

                <RadioButton
                    android:id="@+id/rb_anchor_center_bottom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_center_bottom" />

                <RadioButton
                    android:id="@+id/rb_anchor_right_bottom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:singleLine="true"
                    android:text="@string/anchor_right_bottom" />
            </GridLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    style="@style/TextSubLabel"
                    android:text="@string/anchor_offset_x" />

                <SeekBar
                    android:id="@+id/seek_anchor_offset_x"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:max="500" />

                <TextView
                    android:id="@+id/tv_anchor_offset_x_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    style="@style/TextSubLabel"
                    android:text="@string/anchor_offset_y" />

                <SeekBar
                    android:id="@+id/seek_anchor_offset_y"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:max="500" />

                <TextView
                    android:id="@+id/tv_anchor_offset_y_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v7.widget.CardView>