<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextLabelStyle"
                android:text="@string/menu_color" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    style="@style/TextSubLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/menu_color" />

                <ImageView
                    android:id="@+id/btn_menu_color"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="10dp"
                    tools:background="#000" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    style="@style/TextSubLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/shadow_color" />

                <ImageView
                    android:id="@+id/btn_menu_shadow_color"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="10dp"
                    tools:background="#000" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    style="@style/TextSubLabel"
                    android:text="@string/menu_shadow_radius" />

                <SeekBar
                    android:id="@+id/seek_menu_shadow_radius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8" />

                <TextView
                    android:id="@+id/tv_menu_shadow_radius_value"
                    style="@style/SeekBarValueTextStyle" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v7.widget.CardView>